fix: icon alignment

--- a/style.css
+++ b/style.css
@@ -81,16 +81,11 @@ h1 {
 .btn-add:hover {
 	color: #fff;
 	background-color: var(--light-dark);
-    border: 1px solid #fff;
+	border: 1px solid #fff;
 }
 
 .todolist {
 	padding: 20px 0;
-}
-
-.todolist h3 {
-	text-transform: uppercase;
-	margin-bottom: 16px;
 }
 
 .todolist li {
@@ -104,9 +99,17 @@ h1 {
 	background-color: var(--light);
 }
 
+.category-icon {
+	display: inline-block;
+	text-align: center;
+	margin-right: 10px;
+	height: 16px;
+	width: 16px;
+}
+
 .tools {
 	display: flex;
-    flex-shrink: 0;
+	flex-shrink: 0;
 }
 
 .tools button {
@@ -158,7 +161,7 @@ h1 {
 
 .popup h3 {
 	padding: 20px;
-    text-transform: uppercase;
+	text-transform: uppercase;
 }
 
 .popup-info {
@@ -177,7 +180,7 @@ h1 {
 .popup-input,
 #popup-task-category {
 	width: 100%;
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 	padding: 10px 20px;
 	border: none;
 	border-radius: 5px;
@@ -202,5 +205,5 @@ h1 {
 .popup-btn:hover {
 	color: #fff;
 	background-color: #333;
-    border: 1px solid #fff;
+	border: 1px solid #fff;
 }
